# mistral-7b-qlora-yelp

./: .gitignore  README.md  docker-compose.yml  finetune-with-LoRA.py  inference.py  merge-LoRA.py  pyproject.toml
mistral-qlora-final/: README.md  adapter_config.json
