[project]
name = "qlora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.47.0",
    "datasets>=4.1.1",
    "peft>=0.17.1",
    "safetensors>=0.6.2",
    "transformers>=4.56.2",
]
